--- a/BusReservationProject.WEB/appsettings.json
+++ b/BusReservationProject.WEB/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=BusReservationProject;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=LAPTOP-9F65M1IJ;Database=BusReservationProject;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "baseUrl": "http://localhost:5000/api/",
   "Logging": {
